<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/screenTitle"
            android:background="@android:color/transparent"
            android:src="@drawable/back_arrow"
            app:tint="@color/blue" />

        <TextView
            android:id="@+id/screenTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/mango_shop_title"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/darkergray" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewComments"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingTop="24dp"
        android:paddingBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:background="@color/background"
        android:elevation="8dp"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/commentInput"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:hint="Add a comment..."
            android:paddingStart="12dp"
            android:background="@drawable/rounded_card" />

        <Button
            android:id="@+id/buttonSendComment"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="Comment"
            android:backgroundTint="@color/blue"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

</LinearLayout>