...



        </LinearLayout>

        <ImageButton
            android:id="@+id/viewCommentsBtn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="end"
            android:layout_marginTop="4dp"
            android:background="@android:color/transparent"
            android:src="@drawable/comments_logo"/>
...
